Issue #21720: Improve exception message when the type of fromlist is unicode